<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center|top">
    <!--HEADER-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:gravity="center"
        android:background="#cccc00">

        <ImageButton
            android:id="@+id/hamburger"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/menu"
            android:contentDescription="@string/appbar_scrolling_view_behavior"
            tools:ignore="TouchTargetSizeCheck"/>

        <EditText

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="Search"
            android:textAllCaps="false"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/setting"
            android:contentDescription="@string/appbar_scrolling_view_behavior"
            android:gravity="right"
            android:padding="5dp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>
    <!--HEADER END-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="#EEEEEE"
        android:paddingTop="30dp">

        <!--Groups Tab-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#AAAAAA"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/groups_tab_main_menu"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textColor="#000"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_group_text"
                    android:textSize="11sp"
                    android:backgroundTint="#AAAAAA"
                    android:id="@+id/createGroupButton"/>
            </LinearLayout>
            <!--Body-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--Unable to find Friends-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/noGroupsText"
                    android:orientation="horizontal">
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unable_to_find_groups_text"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>
                </LinearLayout>
                <!--Friends Display-->
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/groupsDisplay"
                    android:visibility="gone">
                </HorizontalScrollView>
            </LinearLayout>
        </LinearLayout>

        <!--Friends Tab-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#AAAAAA"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <!--Friends Title and Add Friends-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friends_tab_main_menu"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textColor="#000"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_friends_tab"
                    android:textSize="11sp"
                    android:backgroundTint="#AAAAAA"
                    android:id="@+id/addFriendScreenButton"/>
            </LinearLayout>
            <!--Body-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--Unable to find Friends-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/noFriendsText"
                    android:orientation="horizontal">
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unable_to_find_friends_text"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>
                </LinearLayout>
                <!--Friends Display-->
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/friendsDisplay"
                    android:visibility="gone">
                </HorizontalScrollView>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Chat" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
